; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ide/extr_alim15x3.c_ali_cable_detect.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ide/extr_alim15x3.c_ali_cable_detect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }
%struct.pci_dev = type { i32 }

@ATA_CBL_PATA40 = common dso_local global i32 0, align 4
@m5229_revision = common dso_local global i32 0, align 4
@ATA_CBL_PATA40_SHORT = common dso_local global i32 0, align 4
@ATA_CBL_PATA80 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*)* @ali_cable_detect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ali_cable_detect(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca %struct.pci_dev*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = call %struct.pci_dev* @to_pci_dev(i32 %9)
  store %struct.pci_dev* %10, %struct.pci_dev** %3, align 8
  %11 = load i32, i32* @ATA_CBL_PATA40, align 4
  store i32 %11, i32* %5, align 4
  %12 = load i64, i64* %4, align 8
  %13 = call i32 @local_irq_save(i64 %12)
  %14 = load i32, i32* @m5229_revision, align 4
  %15 = icmp sge i32 %14, 194
  br i1 %15, label %16, label %36

16:                                               ; preds = %1
  %17 = load %struct.pci_dev*, %struct.pci_dev** %3, align 8
  %18 = call i64 @ali_cable_override(%struct.pci_dev* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %16
  %21 = load i32, i32* @ATA_CBL_PATA40_SHORT, align 4
  store i32 %21, i32* %5, align 4
  br label %35

22:                                               ; preds = %16
  %23 = load %struct.pci_dev*, %struct.pci_dev** %3, align 8
  %24 = call i32 @pci_read_config_byte(%struct.pci_dev* %23, i32 74, i32* %6)
  %25 = load i32, i32* %6, align 4
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = shl i32 1, %28
  %30 = and i32 %25, %29
  %31 = icmp eq i32 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %22
  %33 = load i32, i32* @ATA_CBL_PATA80, align 4
  store i32 %33, i32* %5, align 4
  br label %34

34:                                               ; preds = %32, %22
  br label %35

35:                                               ; preds = %34, %20
  br label %36

36:                                               ; preds = %35, %1
  %37 = load i64, i64* %4, align 8
  %38 = call i32 @local_irq_restore(i64 %37)
  %39 = load i32, i32* %5, align 4
  ret i32 %39
}

declare dso_local %struct.pci_dev* @to_pci_dev(i32) #1

declare dso_local i32 @local_irq_save(i64) #1

declare dso_local i64 @ali_cable_override(%struct.pci_dev*) #1

declare dso_local i32 @pci_read_config_byte(%struct.pci_dev*, i32, i32*) #1

declare dso_local i32 @local_irq_restore(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
